--- a/treeshr/treeshr.vcproj
+++ b/treeshr/treeshr.vcproj
@@ -1,217 +1,324 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="8.00"
 	Name="treeshr"
 	ProjectGUID="{5A4F3EDD-D5B9-4C41-BBA9-DFEFE6AA92CE}"
-	SccProjectName=""
-	SccLocalPath="">
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../Debug"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\Debug/treeshr.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Debug/treeshr.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				CompileAs="0"/>
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/treeshr.dll"
 				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\TreeShr.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/treeshr.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/treeshr.lib"/>
+				ImportLibrary="$(OutDir)/treeshr.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/treeshr.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="../Release"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\Release/treeshr.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				StringPooling="TRUE"
+				StringPooling="true"
 				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="TRUE"
-				UsePrecompiledHeader="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Release/treeshr.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
-				CompileAs="0"/>
+				SuppressStartupBanner="true"
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/treeshr.dll"
 				LinkIncremental="1"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\TreeShr.def"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/treeshr.lib"/>
+				ImportLibrary="$(OutDir)/treeshr.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Release/treeshr.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<Filter
 			Name="Includes"
-			Filter="">
+			>
 			<File
-				RelativePath="treeshrp.h">
+				RelativePath="treeshrp.h"
+				>
 			</File>
 		</Filter>
 		<File
-			RelativePath=".\RemoteAccess.c">
+			RelativePath=".\dummies.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeAddNode.c">
+			RelativePath=".\RemoteAccess.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeAddTag.c">
+			RelativePath=".\TreeAddNode.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeCallHook.c">
+			RelativePath=".\TreeAddTag.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeCleanDatafile.c">
+			RelativePath=".\TreeCallHook.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeCreatePulseFile.c">
+			RelativePath=".\TreeCleanDatafile.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeDeleteNode.c">
+			RelativePath=".\TreeCreatePulseFile.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeDeletePulseFile.c">
+			RelativePath=".\TreeDeleteNode.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeDoMethod.c">
+			RelativePath=".\TreeDeletePulseFile.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeFindNode.c">
+			RelativePath=".\TreeDoMethod.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeFindTagWild.c">
+			RelativePath=".\TreeFindNode.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeGetDbi.c">
+			RelativePath=".\TreeFindTagWild.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeGetNci.c">
+			RelativePath=".\TreeGetDbi.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeGetRecord.c">
+			RelativePath=".\TreeGetNci.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeGetSetShotId.c">
+			RelativePath=".\TreeGetRecord.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeOpen.c">
+			RelativePath=".\TreeGetSetShotId.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreePutRecord.c">
+			RelativePath=".\TreeOpen.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeRemoveNodesTags.c">
+			RelativePath=".\TreePutRecord.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeRenameNode.c">
+			RelativePath=".\TreeRemoveNodesTags.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeSerializeNci.c">
+			RelativePath=".\TreeRenameNode.c"
+			>
 		</File>
 		<File
-			RelativePath="TreeSetDbi.c">
+			RelativePath=".\TreeSegments.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeSetDefault.c">
+			RelativePath=".\TreeSerializeNci.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeSetNci.c">
+			RelativePath="TreeSetDbi.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeShr.def">
+			RelativePath=".\TreeSetDefault.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TreeVerify.c">
+			RelativePath=".\TreeSetNci.c"
+			>
 		</File>
 		<File
-			RelativePath=".\dummies.c">
+			RelativePath=".\TreeShr.def"
+			>
+		</File>
+		<File
+			RelativePath=".\TreeVerify.c"
+			>
 		</File>
 	</Files>
 	<Globals>
