--- a/javascope/jScope.template
+++ b/javascope/jScope.template
@@ -5,14 +5,10 @@
 java=`which java`
 if ( uname -p | grep 64 > /dev/null )
 then
-  while ( file $java | grep -i symbolic > /dev/null )
-  do
-    java=`ls -l $java | cut -d ' ' -f 12`
-  done
-  if ( file $java | grep 64 > /dev/null )
-  then  
+  if (file -L $java } grep 64i-bit > /dev/null )
+  then 
     lib=lib64
-  else  
+  else
     lib=lib32
   fi
 else
