--- a/javatraverser/jTraverser.template
+++ b/javatraverser/jTraverser.template
@@ -5,12 +5,8 @@
 java=`which java`
 if ( uname -p | grep 64 > /dev/null )
 then
-  while ( file $java | grep -i symbolic > /dev/null )
-  do
-    java=`ls -l $java | cut -d ' ' -f 13`
-  done
-  if ( file $java | grep 64 > /dev/null )
-  then
+  if (file -L $java } grep 64i-bit > /dev/null )
+  then 
     lib=lib64
   else
     lib=lib32
