adding  callibrated dt216 device setup

--- a/mitdevices/Makefile.in
+++ b/mitdevices/Makefile.in
@@ -33,6 +33,7 @@ UIDS = \
 @MAKEUIDDIR@DT_ACQ16.uid \
 @MAKEUIDDIR@DT200DA.uid \
 @MAKEUIDDIR@DT216.uid \
+@MAKEUIDDIR@DT216A.uid \
 @MAKEUIDDIR@DSP2904.uid \
 @MAKEUIDDIR@EC727.uid \
 @MAKEUIDDIR@FERA.uid \
@@ -686,6 +687,7 @@ MitDevices.exports: MitDevices.def
 @MAKEUIDDIR@DT200.uid : DT200.uil ; $(UIL) -o @MAKEUIDDIR@DT200.uid DT200.uil
 @MAKEUIDDIR@DT200DA.uid : DT200DA.uil ; $(UIL) -o @MAKEUIDDIR@DT200DA.uid DT200DA.uil
 @MAKEUIDDIR@DT216.uid : DT216.uil ; $(UIL) -o @MAKEUIDDIR@DT216.uid DT216.uil
+@MAKEUIDDIR@DT216A.uid : DT216A.uil ; $(UIL) -o @MAKEUIDDIR@DT216A.uid DT216A.uil
 @MAKEUIDDIR@DT_ACQ16.uid : DT_ACQ16.uil ; $(UIL) -o @MAKEUIDDIR@DT_ACQ16.uid DT_ACQ16.uil
 @MAKEUIDDIR@DSP2904.uid : DSP2904.uil ; $(UIL) -o @MAKEUIDDIR@DSP2904.uid DSP2904.uil
 @MAKEUIDDIR@EC727.uid : EC727.uil ; $(UIL) -o @MAKEUIDDIR@EC727.uid EC727.uil
