Add monitor for actions failed

--- a/javadispatcher/jDispatcher.properties
+++ b/javadispatcher/jDispatcher.properties
@@ -8,7 +8,7 @@ jDispatcher.monitor_1.port = 8010
 
 jDispatcher.info_port = 8011
 jDispatcher.error_port=8020
-
+jDispatcher.doneActionMonitor_port=8999
 
 #server classes and mdsip addresses, used by jDispatcherIp
 
