--- a/mdsip_xio/Makefile.in
+++ b/mdsip_xio/Makefile.in
@@ -151,7 +151,7 @@ install:
 	$(LD) -o $@ @LINKSHARED@ $(CLIENT_OBJECTS) $(LDFLAGS)
 
 @MAKEBINDIR@mdsip : $(SERVER_OBJECTS)
-	$(CC) -o $@ @CC_LDFLAGS@ $(SERVER_OBJECTS) $(LDFLAGS) -L$(top_srcdir)/lib -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr
+	$(CC) -o $@ @CC_LDFLAGS@ $(SERVER_OBJECTS) $(LDFLAGS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr
 
 makefile-header:  
 	GLOBUS_LOCATION=@GLOBUS_LOCATION@; $$GLOBUS_LOCATION/bin/globus-makefile-header --flavor=@GLOBUS_FLAVOR@pthr globus_xio > makefile-header
